kubernetes/apps/kyverno/kyverno/policies/volsync-movers.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/kyverno.io/clusterpolicy_v1.json
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: volsync-movers
  annotations:
    policies.kyverno.io/title: Mutate Volsync mover jobs
    policies.kyverno.io/subject: Pod
spec:
  rules:
    - name: mutate-volsync-src-movers
      match:
        any:
          - resources:
              kinds:
                - "batch/v1/Job"
              names:
                - "volsync-src-*"
              namespaces:
                - "*"
              selector:
                matchLabels:
                  app.kubernetes.io/created-by: volsync
      mutate:
        patchStrategicMerge:
          spec:
            podReplacementPolicy: Failed
            podFailurePolicy:
              rules:
                - action: FailJob
                  onExitCodes:
                    containerName: restic
                    operator: In
                    values:
                      - 11
            template:
              spec:
                initContainers:
                  - name: jitter
                    image: ghcr.io/home-operations/busybox:1.37.0@sha256:026ed7273270ec08f6902b4ae8334c23b473e5394bec3bbbdbfe580c710d50bc
                    imagePullPolicy: IfNotPresent
                    command:
                      - "sh"
                      - "-c"
                      - "sleep $(shuf -i 0-90 -n 1)"
                containers:
                  - name: restic
                    volumeMounts:
                      - name: repository
                        mountPath: /repository
                volumes:
                  - name: repository
                    nfs:
                      server: ${SECRET_NAS_IP:=nas.home.arpa}
                      path: /mnt/tank/volsync
    - name: mutate-volsync-dst-movers
      match:
        any:
          - resources:
              kinds:
                - "batch/v1/Job"
              names:
                - "volsync-dst-*"
              namespaces:
                - "*"
              selector:
                matchLabels:
                  app.kubernetes.io/created-by: volsync
      mutate:
        patchStrategicMerge:
          spec:
            template:
              spec:
                containers:
                  - name: restic
                    volumeMounts:
                      - name: repository
                        mountPath: /repository
                volumes:
                  - name: repository
                    nfs:
                      server: ${SECRET_NAS_IP:=nas.home.arpa}
                      path: /mnt/tank/volsync
